Make "sbt clean" for version >=1.12 run (#2361)